# video-clipper

./: Cargo.toml
src/: main.rs
