[package]
name = "file_dialog"
version = "0.1.0"
rust-version = "1.76"

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rfd = "0.13"
